# resilient_workflows_public

./: .gitattributes  .gitignore  CLAUDE.md  NOTES  NOTES.md  NOTES_IMPERIAL.md  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  dagster-expert.md  ui-ux-master.md
.github/workflows/: contanerize.yaml  contanerize_public.yaml
configs/dagster/: workspace.yaml
data/: possible sources
data/airnow/: notes.md
data/airquality/openemeteo/: readme
data/apcd_sd/: notes.md  stations.csv
data/beach_water_quality/: note.md
data/ca_hhs/wastewater/: site_data.csv
data/cdc/: cdc_notes  nhsn.md  nndss.md
data/data_ca_gov/: note.md
data/discharge_tj/: note.md
data/flood_caltrans/: readme.md
data/geographic/: NOTES.md  note_sra.md
data/healthyplaces/: notes.md
data/la_county/: NOTEs
data/ourworlddata/: README.md
data/pesticides/: readme.md
data/sandag/: notes.md
data/sandiego_epideimilogy/: README.md  Time_Series_0427D0184F5A45B7973E2512848A1EE4.csv  sdepi_asset_prompt.md  sdepi_create_notebook_propmpt.md
data/sd_complaints/: Smell Complaints.md
data/sdfc/: 13dc0415-a214-4132-9526-a39b7e2f1825.docx  notes.md
data/spills/: sewage_stations.csv
data/tides/: notes
data/tijuana/: NOTES.md
data/wastewaterscan/: NOTES.md
data/weather/openmeteo/: notes.md
deploy/: dagster_core.yml  dagster_workflows.yml
prod_resources/: dagster.yaml
runConfigurations/: Python tests for information_tests.test_assets.test_team_asset.run.xml  dagster asset airnowlocations.run.xml  dagster asset beachwatch_recent.run.xml  dagster asset beachwatch_sdbeachinfo_status.run.xml  dagster asset list.run.xml  dagster asset sandiego_epidemiology_workbook_download.run.xml  dagster dev information.run.xml  dagster dev public.run.xml  dagster devpublic.run.xml  setup.run.xml
workflows/: example.env
workflows/public/: README.md  setup.cfg  setup.py  workspace.yaml
workflows/public/notebooks/: RESP-NET.ipynb  SD_mpox.ipynb  airnow.ipynb  beach_parse_advisories.ipynb  beachwatch.ipynb  ca_beachclosure.ipynb  cdc_ndss.ipynb  cdc_nndss_mpox.ipynb  cdc_odata.ipynb  date_array.ipynb  filelist.json  game.ipynb  geomerty_simplify.ipynb  h2s_analysis.ipynb  h2s_models.ipynb  ibiogram_datasets.ipynb  ibiogram_parquet.ipynb  ibwc_spills.ipynb  mpox_la_county.ipynb  mpox_la_powerbi.ipynb  mpox_sf_dataporta.ipynb  national_estuarine_pyoss.ipynb  national_estulary.ipynb  openmeteo.ipynb  purple_air.ipynb  sandiego_epideimilogy.ipynb  sandiego_epidemiology_extraction.ipynb  sandiego_epiemilogy_v2.ipynb  sandiego_onerain.ipynb  sd_apcd_air.ipynb  sd_complaints.ipynb  sd_complaints_intersection_check.ipynb  sd_flood_control.ipynb  sd_park_clousures.ipynb  sdbeachinfo.ipynb  soap_client.ipynb  test_weekcounts.ipynb  tjriver_flow.ipynb  wastewaterscan.ipynb  wonder_mpox.ipynb  (+1 more)
workflows/public/public/: __init__.py
workflows/public/public/assets/: __init__.py  airnow.py  beach_monitoring.py  cdc_nnds.py  failure_asset.py  gis.py  ibwc_spills.py  mpox_counties.py  openmeteo.py  purple_air.py  respnet.py  sandag_game_parcels.py  sandag_wastwater.py  sandiego_epidemiology.py  sandiego_epidemiology_v0.py  sandiego_epidemiology_v1.py  sd_apcd.py  sd_complaints.py  streamflow.py  wastewaterscan.py
workflows/public/public/resources/: Socrata.py  airtable.py  arcgis.py  foursquare.py  minio.py
workflows/public/public/utils/: constants.py  date.py  store_assets.py  tableau_extractor.py  tableau_extractor_v2.py  tableau_workbook.py
workflows/public/tests/: test_tableau_extractor_v2.py
workflows/utilites/utilities/: foursquare.py  s3Resources.py
workflows/utilites/utilities_test/: resource_tests.py
